<resources>
    <string name="app_name">ProyectApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_chat">Chat</string>
    <string name="dolar_precio">Cargando precio del dolar... </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">sss</string>
    <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string translatable="false" name="done">Done</string>
    <string-array translatable="false" name="depth_options_array">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
    <string-array translatable="false" name="instant_placement_options_array">
        <item>Enable Instant Placement</item>
    </string-array>

    <string translatable="false" name="searching_planes">Searching for surfaces...</string>
    <string translatable="false" name="waiting_taps">Tap on a surface to place an object.</string>
    <string name="usd_exchange_rate">USD Exchange Rate</string>
    <string name="flashlight_icon">Flashlight Icon</string>
    <string name="flashlight">Flashlight</string>
    <string name="distance_meter_icon">Distance Meter Icon</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="distance_meter">Distance Meter</string>
    <string name="send_message">Send Message</string>
    <string name="type_a_message">Type a message...</string>
</resources>